org.eclipse.jdt.compiler.apt.tests/processors/org/eclipse/jdt/compiler/apt/tests/processors/negative/NegativeModelProc#checkNegative1().mjava
	/**
	 * Check the model of resources/targets.negative.pa.Negative6
	 * @return true if all tests passed
	 */
	public boolean checkNegative1() throws Exception {

		// Self-test of XML language model framework.
		// TODO: this should be moved into the ModelTests test suite.
		if (!XMLComparer.test()) {
			reportError("XML language model comparison framework failed self-test");
			return false;
		}

		// Test is failing on Linux - https://bugs.eclipse.org/bugs/show_bug.cgi?id=224424
		if (System.getProperty("os.name").indexOf("Windows") == -1) return true;

		// Get the root of the Negative1 model
		TypeElement element = _elementUtils.getTypeElement("targets.negative.pa.Negative1");
		if (null == element || element.getKind() != ElementKind.CLASS) {
			reportError("Element Negative1 was not found or was not a class");
			return false;
		}

		return checkModel(Collections.singletonList(element), NEGATIVE_1_MODEL, "Negative1");
	}

